<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_caution_background"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!--     Text       -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_caution_title"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_caution_tvInfo01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dialog_caution_handInfo01"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dialog_caution_info"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dialog_caution_tvInfo02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/dialog_caution_handInfo02"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_caution_tvInfo03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dialog_caution_handInfo03"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_caution_tvInfo04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dialog_caution_handInfo04"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <!--     example img       -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_caution_border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_caution_ivIC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_caution_hand" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_caution_exImage"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/dialog_caution_btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ff0000"
        android:text="@string/dialog_caution_btnConfirm"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>