<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/activity_sign_up_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_clear_24"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_sign_up_tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/activity_sign_up_tvSignUp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/activity_sign_up_line"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_tvSignUp" />


    <!-- User Info Form -->
    <LinearLayout
        android:id="@+id/activity_sign_up_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_sign_up_tvInfo01"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_sign_up_tvInfo02"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- NickName Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_sign_up_tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/activity_sign_up_tvUserName"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/activity_sign_up_etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:digits="@string/digits_ID"
                android:hint="@string/activity_sign_up_etUserNameHint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <!-- ID Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_sign_up_tvID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:text="@string/activity_sign_up_tvID"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/activity_sign_up_btnIDCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/activity_sign_up_btnIDCheck"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <EditText
                android:id="@+id/activity_sign_up_etID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:digits="@string/digits_ID"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/activity_sign_up_tvIDInfo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <!-- PW Form  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_sign_up_tvPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/activity_sign_up_tvPW"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_etPW"
                app:layout_constraintStart_toStartOf="@+id/activity_sign_up_etPW"
                app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_tvIDInfo" />

            <EditText
                android:id="@+id/activity_sign_up_etPW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:digits="@string/digits_PW"
                android:hint="@string/activity_sign_up_etPWHint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_tvPW"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <!-- PW Check Form -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_sign_up_tvPWCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/activity_sign_up_tvPWCheck"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/activity_sign_up_etPWCheck"
                app:layout_constraintStart_toStartOf="@+id/activity_sign_up_etPWCheck"
                app:layout_constraintTop_toBottomOf="@+id/activity_sign_up_etPW" />

            <EditText
                android:id="@+id/activity_sign_up_etPWCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:digits="@string/digits_PW"
                android:hint="@string/activity_sign_up_etPWCheck"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/activity_sign_up_btnSignUp"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_round_square_gray"
            android:text="@string/activity_sign_up_btnSignUp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>